# First_repo

./: folder_sort.py  sort.py  sort_try1.py
FinalProject/: User_Interface.py  dia.drawio  logs.txt
bot_assistant/: main.py
clean_folder/: setup.py
clean_folder/clean_folder/: __init__.py  clean.py
homewor2-2/: Bot.py  Dockerfile  __main__.py  logs.txt  pyproject.toml  requirements.txt
homewor2-2/homework2-2/: User_Interface.py
homework10/: main.py
homework11/: main.py
homework12/: main.py
python-core-homework-08-main/: main.py
