[tool.poetry]
name = "homewor2-2"
version = "0.1.0"
description = ""
authors = ["Barashuk1 <130751763+Barashuk1@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "homewor2-2"}]

[tool.poetry.dependencies]
python = "3.11.5"
datetime = "5.4"
aiosqlite = "^0.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
